fix: post content text word-wrap and clear input when posted

--- a/src/components/PostBox/PostBox.module.scss
+++ b/src/components/PostBox/PostBox.module.scss
@@ -207,6 +207,11 @@
   }
 }
 
+.PostText {
+  text-align: center;
+  overflow-wrap: anywhere;
+}
+
 .Bytes32Parameter {
   position: relative;
   z-index: 2;
